--- a/src/demo/all.css
+++ b/src/demo/all.css
@@ -23,34 +23,15 @@
   font-weight: bold;
 }
 
-
-.am-button {
-  width: 343px !important;
-  border-radius: 22px !important;
-  margin: 0 auto !important;
-  font-size: 16px;
-}
-
 .am-button-warning {
-  background: #F9F9F9 !important;
+  background: #f9f9f9 !important;
   width: 124px !important;
   height: 40px !important;
-  color: #FF4900 !important;
+  color: #ff4900 !important;
   border-radius: 20px !important;
   padding: 0 !important;
   margin: 0 !important;
   margin: 0 auto !important;
-}
-
-.add-btn {
-  width: 343px;
-  text-align: center;
-  color: #909399;
-  font-size: 16px;
-  margin: 0 auto;
-  background: #fff;
-  height: 44px;
-  line-height: 44px;
 }
 
 .am-button::before {
@@ -59,13 +40,12 @@
 
 .am-input-item {
   height: 62px !important;
-
 }
 
 .delBtn {
   width: 100% !important;
   height: 40px !important;
-  color: #FF4900 !important;
+  color: #ff4900 !important;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -77,4 +57,22 @@
 
 .bom-view {
   height: 30px;
+}
+
+.am-button {
+  width: 90% !important;
+  border-radius: 22px !important;
+  margin: 0 auto !important;
+  font-size: 16px;
+}
+
+.add-btn {
+  width: 100%;
+  text-align: center;
+  color: #909399;
+  font-size: 16px;
+  margin: 0 auto;
+  background: #fff;
+  height: 44px;
+  line-height: 44px;
 }
